fix overflow and center container

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,15 +9,18 @@
     border: 2.5px solid black;
 }
 
-* {
-  border-style: dashed;
-}
+$panel-color-1: white;
+
+// * {
+//   border-style: dashed;
+// }
 
 body {
     height: 100%;
     width: 100%;
     background-color: rgb(180, 225, 240);
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
   }
 
   #navbar {
@@ -53,10 +56,13 @@ body {
   }
 
   #content-container {
+    width: 90%;
     display: grid;
-    grid-template-columns: 45% 45%;
+    grid-template-columns: 50% 50%;
     gap: 15px;
     grid-template-rows: 300px 300px 300px 300px 300px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
 
